package dat.cupcake.model.entities;

public enum Status {
    CANCELLED,
    NOT_SUBMITTED,
    SUBMITTED,
    AWAITING_PICKUP,
    COMPLETED
}
